name:                highlight
version:             0.1.0.0
synopsis:            Highlight words from stdin
license:             MIT
license-file:        LICENSE
author:              alvare
maintainer:          welcometothechango@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable highlight
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , utf8-string >=0.3
                     , stringsearch >=0.3
                     , bytestring >=0.8
                     , ansi-terminal >=0.5

  hs-source-dirs:      src
  default-language:    Haskell2010
