name:                highlight
version:             0.1.0.0
synopsis:            Highlight words from stdin
license:             MIT
license-file:        LICENSE
author:              alvare
maintainer:          welcometothechango@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable highlight
  main-is:             Main.hs
  build-depends:       base
                     , utf8-string
                     , stringsearch
                     , bytestring
                     , ansi-terminal

  hs-source-dirs:      src
  default-language:    Haskell2010
